refactor(nacos): 优化代码兼容性及废弃API替换
- 使用标准库方法替代 StringUtils，避免外部依赖
- 修正 baseUrl 字符串处理，避免空指针异常
- 注释说明不应直接调用 update 方法，遵循 API 规范
- 替换 ExecutionManager 为 RunContentManager，兼容新版 API
- 使用 ProcessBuilder 替代过时的 Runtime.exec() 方式解压文件
- 优化获取 Project 对象的逻辑，支持无焦点或无打开项目场景
- 使用 URI 转换 URL，增强 URL 构造的健壮性
- 替换 JBTabsImpl 为 JBTabsFactory 创建实例，采用官方推荐方式
- 注释掉已弃用的 JVM 热更新参数配置，避免启动错误